2005-01-20  Jeremy Cribb <jcribb@email.unc.edu>
	* randwalk.m: added magnitude to the randomizer.  Some returned clock values were returning identical seed values to the random number generator.  bad.
	* windiff.m: added the new grid to the return values.

2004-12-06  Jeremy Cribb <jcribb@email.unc.edu>
	* randwalk.m: vectorized random walk so that it runs faster in matlab.

2004-11-17  Jeremy Cribb <jcribb@email.unc.edu>
	* windiff.m: updated documentation; switched inputs for consistency.

2004-10-26  Jeremy Cribb <jcribb@email.unc.edu>
	* windiff.m: fixed a bug that incorrectly assigned grid values.  fixed documentation.

2004-10-23  Jeremy Cribb <jcribb@email.unc.edu>
	* windiff.m: added.  computes a numerical derivative over some window size.

2004-09-01  Jeremy Cribb <jcribb@email.unc.edu>
	* added heavi.m, which will output Heaviside function with delay.

2004-05-18  Jeremy Cribb <jcribb@email.unc.edu>
	* Initial Version
