@@ -3,9 +3,10 @@ function v = phase(A,B)
 % Math 
 % last modified 05/07/04 
 %  
-%  This function computes the phase angle of A & B.
+%  This function computes the phase angle of A & B.  Different from
+%  Matlab's angle in that you don't have to use complex variables.
 %
-%     v = rms(A,B);
+%     v = phase(A,B);
 %   
 %  where "A" and "B" are vector components in (x,y) coordinate system.
 %  
@@ -13,7 +14,8 @@ function v = phase(A,B)
 %   
 %  11/19/02 - created; jcribb 
 %  05/07/04 - added documentation; jcribb
+%  05/21/05 - reduced noise at phase wrap-arounds by using atan2
 
-    v = atan(B./A);
+    v = atan2(B,A);
     
     
